Changes have been made!!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Mapping</string>
     <string name="Go">GO!</string>
+    <string name="choosemap">Choose Map Style</string>
 </resources>
