--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Mapping</string>
     <string name="Go">GO!</string>
     <string name="choosemap">Choose Map Style</string>
+    <string name="menu_save">Menu Save</string>
+    <string name="menu_load">Menu Load</string>
 </resources>
